# kicad-source-mirror

./: .bzrignore  .clang-format  .clang-tidy  .gitattributes  .gitconfig  .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS.txt  CHANGELOG-2008.txt  CHANGELOG.txt  CMake.TODO  CMakeLists.txt  CMakePresets.json.sample  CMakeSettings.json.sample  CODING_GUIDELINES.txt  COMPILING-Debian.txt  COMPILING.txt  CONTRIBUTING.md  COPYRIGHT.txt  CTestConfig.cmake  Doxyfile  DoxygenLayout.xml  GUI_Translation_HOWTO.odt  HOW_TO_CONTRIBUTE.txt  How_to_translate_GUI.sxw  INSTALL.txt  Info.plist.in  LICENSE.3-CLAUSE-BSD  LICENSE.CC-BY-SA-4.0  LICENSE.ISC  LICENSE.README  LINGUAS  POTDIRS  POTFILES.in  README.adoc  README.md  README.txt  TODO  TODO.txt  (+49 more)
3d-viewer/: 3d_aux.cpp  3d_canvas.cpp  3d_canvas.h  3d_class.cpp  3d_draw.cpp  3d_draw_basic_functions.cpp  3d_draw_basic_functions.h  3d_draw_board_body.cpp  3d_draw_helper_functions.cpp  3d_enums.h  3d_fastmath.cpp  3d_fastmath.h  3d_frame.cpp  3d_material.cpp  3d_material.h  3d_math.cpp  3d_math.h  3d_mesh_model.cpp  3d_mesh_model.h  3d_plugin_dir.h.in  3d_read_mesh.cpp  3d_struct.h  3d_toolbar.cpp  3d_types.h  3d_viewer.h  3d_viewer_id.h  CBBox.cpp  CBBox.h  CImage.cpp  CImage.h  CMakeLists.txt  bitmaps3d.h  credits.txt  info3d_visu.cpp  info3d_visu.h  makefile.g95  makefile.gtk  makefile.include  makefile.macosx  makefile.mingw  (+10 more)
api/: CMakeLists.txt
bitmap2component/: CMakeLists.txt  Info.plist  Info.plist.in  bitmap2cmp_control.cpp  bitmap2cmp_control.h  bitmap2cmp_frame.cpp  bitmap2cmp_frame.h  bitmap2cmp_gui.cpp  bitmap2cmp_gui.h  bitmap2cmp_gui_base.cpp  bitmap2cmp_gui_base.fbp  bitmap2cmp_gui_base.h  bitmap2cmp_main.cpp  bitmap2cmp_panel.cpp  bitmap2cmp_panel.h  bitmap2cmp_panel_base.cpp  bitmap2cmp_panel_base.fbp  bitmap2cmp_panel_base.h  bitmap2cmp_settings.cpp  bitmap2cmp_settings.h  bitmap2component.cpp  bitmap2component.h  bitmap2component.icns  bitmap2component.rc  bitmap2component.xpm  bitmap2component_16x16.xpm  gui_bm2cmp.cpp  icon_bitmap2component.xpm
bitmaps/: 3d.xpm  Add_Arc.xpm  Add_Circle.xpm  Add_Component.xpm  Add_Corner.xpm  Add_Dashed_Line.xpm  Add_Entry.xpm  Add_GLabel.xpm  Add_Junction.xpm  Add_Line.xpm  Add_Line2Bus.xpm  Add_Line_Label.xpm  Add_Mires.xpm  Add_Polygon.xpm  Add_Rectangle.xpm  Add_Text.xpm  Add_Tracks.xpm  Add_Zone.xpm  Add_Zone_Cutout.xpm  Apply.xpm  Auto_track_width.xpm  Break_Bus.xpm  Break_Line.xpm  Browse_Files.xpm  CMakeLists.txt  Cancel.xpm  CopyBlock.xpm  Cursor_Shape.xpm  Datasheet.xpm  Delete_Arc.xpm  Delete_Circle.xpm  Delete_Connection.xpm  Delete_Cotation.xpm  Delete_Field.xpm  Delete_Line.xpm  Delete_Module.xpm  Delete_Net.xpm  Delete_Node.xpm  Delete_Pad.xpm  Delete_Pin.xpm  (+368 more)
bitmaps_png/: CMakeLists.txt  mk_icn_res.sh  mk_mac_icons.sh
common/: CMakeLists.txt  about_kicad.cpp  advanced_config.cpp  app_monitor.cpp  array_axis.cpp  array_options.cpp  asset_archive.cpp  background_jobs_monitor.cpp  base64.cpp  base_screen.cpp  base_struct.cpp  base_units.cpp  basic_gal.cpp  basicframe.cpp  bezier_curves.cpp  bin_mod.cpp  bitmap.cpp  bitmap_base.cpp  bitmap_info.cpp  bitmap_store.cpp  bitmaps.cpp  block_commande.cpp  board_printout.cpp  build_version.cpp  callback_gal.cpp  class_bitmap_base.cpp  class_colors_design_settings.cpp  class_drawpickedstruct.cpp  class_layer_box_selector.cpp  class_layerchoicebox.cpp  class_marker_base.cpp  class_page_info.cpp  class_plotter.cpp  class_undoredo_container.cpp  cli_progress_reporter.cpp  clipboard.cpp  colors.cpp  colors_design_settings.cpp  commit.cpp  commit.h  (+266 more)
cvpcb/: CMakeLists.txt  Info.plist  Info.plist.in  affiche.cpp  affiche.cpp.notused  auto_associate.cpp  auto_associate.h  autosel.cpp  autosel.h  cfg.cpp  cfg.h  class_DisplayFootprintsFrame.cpp  class_DisplayFootprintsFrame.h  class_components_listbox.cpp  class_cvpcb.cpp  class_footprints_listbox.cpp  class_library_listbox.cpp  common_help_msg.h  components_listbox.cpp  cvframe.cpp  cvpcb.cpp  cvpcb.h  cvpcb.icns  cvpcb.rc  cvpcb_association.h  cvpcb_doc.icns  cvpcb_id.h  cvpcb_mainframe.cpp  cvpcb_mainframe.h  cvpcb_settings.cpp  cvpcb_settings.h  cvstruct.h  dialog_cvpcb_config.cpp  dialog_cvpcb_config.h  dialog_cvpcb_config.pjd  dialog_cvpcb_config_fbp.cpp  dialog_cvpcb_config_fbp.fbp  dialog_cvpcb_config_fbp.h  dialog_display_options.cpp  dialog_display_options.h  (+47 more)
demos/: CMakeLists.txt
doc/: CMakeLists.txt  GUI Translation HOWTO.sxw
doxygen/: CMakeLists.txt  Doxyfile  doxygen.Dockerfile  doxygen.Dockerfile.dockerignore  eagle-plugin-notes.txt  header.html
eeschema/: BOM_lister.h  CMakeLists.txt  Info.plist  Info.plist.in  affiche.cpp  annotate.cpp  annotate_dialog.cpp  annotate_dialog.h  annotate_dialog.pjd  autoplace_fields.cpp  backanno.cpp  block.cpp  block_libedit.cpp  bom_exporter.cpp  bom_exporter.h  bom_plugins.cpp  bom_plugins.h  bom_table_column.cpp  bom_table_column.h  bom_table_model.cpp  bom_table_model.h  build_BOM.cpp  bus-wire-junction.cpp  bus_alias.cpp  bus_alias.h  busentry.cpp  class_BodyItem_Text.cpp  class_drawsheet.cpp  class_drawsheet.h  class_drawsheetpath.cpp  class_drawsheetpath.h  class_drc_erc_item.cpp  class_hierarchical_PIN_sheet.cpp  class_hierarchy_sheet.cpp  class_libentry.cpp  class_libentry.h  class_libentry_fields.cpp  class_libentry_fields.h  class_library.cpp  class_library.h  (+569 more)
gerbview/: CMakeLists.txt  DCodeSelectionbox.cpp  DCodeSelectionbox.h  Info.plist  Info.plist.in  X2_gerber_attributes.cpp  X2_gerber_attributes.h  affiche.cpp  am_param.cpp  am_param.h  am_primitive.cpp  am_primitive.h  aperture_macro.cpp  aperture_macro.h  attributes.h  block.cpp  cfg.cpp  cfg.h  class_DCodeSelectionbox.cpp  class_DCodeSelectionbox.h  class_GERBER.cpp  class_GERBER.h  class_X2_gerber_attributes.cpp  class_X2_gerber_attributes.h  class_am_param.cpp  class_am_param.h  class_aperture_macro.cpp  class_aperture_macro.h  class_excellon.h  class_gbr_display_options.h  class_gbr_layer_box_selector.cpp  class_gbr_layer_box_selector.h  class_gbr_layout.cpp  class_gbr_layout.h  class_gbr_screen.cpp  class_gbr_screen.h  class_gerber_draw_item.cpp  (+120 more)
(+15351 files in other folders)
